2004-09-06 Alain Magloire

	The changes is move the MISession as part
	of Target.  The rationale; we want to have
	        Session
	   ---------------
	   |             |
	  Target(gdb)   Target(gdb)
	To be able to do this we need to untie the MISession
	from Session.

	Also we are moving toward retiring the ICDIXXXXManager
	and move the methods in the the proper methods.

2004-09-01 Alain Magloire

	Fix for 72974
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2004-08-14 Alain Magloire

	Fix for 71992.
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-08-05 Alain Magloire

	Tentative Fix for PR 69991
	* src/org/eclipse/cdt/debug/mi/core/RxThread.java

2004-07-22 Alain Magloire

	Fix for PR 70688
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-07-12 Alain Magloire

	Remove some compiler warnings.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Register.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java

	* mi/org/eclipse/cdt/debug/mi/core/command/CygwinMIEnvirnmentDirectory.java
	* src/org/eclipse/cdt/debug/mi/core/CygwinGDBDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2004-07-09 Alain Magloire

	Patch from gwatson to deal with Mac
	version of gdb, there gdb as a different
	syntax but still valid.

	* mi/org/eclipse/cdt/debug/mi/core/output/MIArg.java

2004-07-09 Alain Magloire

	Patch from Stefan Bylund for PR 69711
	Added support for thread name.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java
	* mi/org/eclipse/cdt/debug/mi/core/output/MIInfoThreadsInfo.java

2004-07-02 Mikhail Khodjaiants

	Fix for bug 68934: Debug into dll doesn't work.
	The "solib-search-path" and "stop-on-solib-events" options are not supported by gdb on CygWin.
	* src/org/eclipse/cdt/debug/mi/core/CygwinGDBDebugger.java
